--- a/front/package.json
+++ b/front/package.json
@@ -1,7 +1,7 @@
 {
   "name": "front",
   "version": "1.0.0",
-  "description": "esto es una demo de node",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "live-server",
@@ -11,10 +11,12 @@
   "author": "Giovanna Martinez Russo",
   "license": "ISC",
   "devDependencies": {
-    "live-server": "^1.2.2"
-  },
-  "dependencies": {
+    "live-server": "^1.2.2",
+    "nodemon": "^3.1.0",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "axios": "^1.6.8"
   }
 }
